--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "date-picker": "^0.5.0",
     "mdb-react-ui-kit": "^7.1.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.30.1",
