--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,7 +3,7 @@ NODE_ENV = DEVELOPMENT
 
 DB_URI ="mongodb+srv://kaylamaebaluyot:senku123@cluster0.8njcehg.mongodb.net/Ampalaya?retryWrites=true&w=majority"
 
-JWT_SECRET = gWlkpvmeYqas79948OiH
+JWT_SECRET = b4134e9b0cba3ecc2b26
 JWT_EXPIRES_TIME = 7d
 COOKIE_EXPIRES_TIME = 7
 
@@ -11,9 +11,8 @@ SMTP_HOST = sandbox.smtp.mailtrap.io
 SMTP_PORT = 2525
 SMTP_EMAIL = 18a2a26eef4f45
 SMTP_PASSWORD = 865719decb6b03
-SMTP_FROM_EMAIL = customer@gmail.com
 SMTP_FROM_NAME = admin
 
-CLOUDINARY_CLOUD_NAME = dszqsne7p
-CLOUDINARY_API_KEY = 	833878715611981
-CLOUDINARY_API_SECRET = SEtrhIv-SkwJfKt6H_T3EyFwP2c
+CLOUDINARY_CLOUD_NAME = dhqaglrqs
+CLOUDINARY_API_KEY = 	925898771656327
+CLOUDINARY_API_SECRET = 71XLAeRT16UGuGiUgVh-IJ1pkoM
