--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "cors": "^2.8.5",
     "date-picker": "^0.5.0",
     "mdb-react-ui-kit": "^7.1.0",
     "mdbreact": "^5.2.0",
@@ -25,6 +26,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "source-map-loader": "^5.0.0",
     "web-vitals": "^2.1.4"
