--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.5",
+    "@mui/lab": "^5.0.0-alpha.165",
     "@mui/material": "^5.15.5",
     "@mui/x-charts": "^6.19.4",
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,6 +18,7 @@
     "mdb-react-ui-kit": "^7.1.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.30.1",
+    "mui-datatables": "^4.3.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
     "react-bootstrap": "^2.10.0",
