--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "source-map-loader": "^5.0.0",
