--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,9 @@
     "axios": "^1.6.5",
     "cors": "^2.8.5",
     "date-picker": "^0.5.0",
+    "exceljs": "^4.4.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "mdb-react-ui-kit": "^7.1.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.30.1",
@@ -32,7 +35,8 @@
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.4",
     "source-map-loader": "^5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
