--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "mdb-react-ui-kit": "^7.1.0",
     "mdbreact": "^5.2.0",
     "moment": "^2.30.1",
